# 25-Efficient-Privacy-Information-Retrieval

./: .gitignore  CMakeLists.txt  README.md  config.json  dockerfile  make_database.py  result.txt  test.py
include/: PIR_server.h  mod.h  multipir.h  net_server.h  okvs.h  pir.h  pir_io.h  poly.h  spiral.h  values.h
src/: core.cpp  pir_io.cpp  spiral.cpp
src/Batch-PIR/: PIR_server.cpp  main.cpp  test_batch.cpp
src/Multi-PIR/: multipir.cpp  pir.cpp
src/OCC/: rbmatrices.cpp
src/OCD/: 3H_GCT.cpp  okvs.cpp
src/PBC/: cuckoo.cpp  mod.cpp
src/benchmark/: test.cpp
test/: output.txt  result.txt  spiral_test.py
